minor text changes

--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -20,11 +20,11 @@
                            :participants => [
                            {
                                :title => "Marc Heiduk",
-                               :type  => "Web developer from Austria"
+                               :type  => "Web Developer"
                            },
                            {
                                :title => "Anton Porsche",
-                               :type  => "Web developer from Germany"
+                               :type  => "Web Developer"
                            }
                           ]
                         },
@@ -86,7 +86,7 @@
                            :participants => [
                              {
                                :title => "Daniel Vliegenthart",
-                               :type  => "full-stack web developer"
+                               :type  => "Full-Stack Web Developer"
                              }
                            ]
                          },
