--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -13,27 +13,27 @@
                                  desc: "In just 6 weeks we built a Q&A platform from scratch! In this short time we integrated our own token economy powered by @OSTdotcom for rewarding good answers.",
                                  handle:"@kwandaDotMe",
                                  profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/kwandadotme.jpg",
-                                 link:"https://twitter.com/kwandaDotMe"
+                                 link:"https://twitter.com/kwandaDotMe/status/1000738502345216001"
                              },
                              {
                                  desc: "Being a part of the growing developer community building on OST has been amazing. #osta2
                                                    Using OST KIT, here’s a look at what dev. teams from around the world were able to create in less than six weeks!",
                                  handle:"@Ostkidtoken",
                                  profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/ostkidtoken.jpg",
-                                 link:"https://twitter.com/Ostkidtoken"
+                                 link:"https://twitter.com/Ostkidtoken/status/1001099129358028801"
                              },
                              {
                                  desc: "I'm done! https://medium.com/really-simple-store …Thank you, @OSTdotcom and @betashop ! I had such a blast working on this over the last 6 weeks. #OST #OSTa2 $OST",
                                  handle:"@truedrewco",
                                  profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/truedrewco.jpg",
-                                 link:"https://twitter.com/truedrewco"
+                                 link:"https://twitter.com/truedrewco/status/999336118062546944"
 
                              },
                              {
                                  desc: "Excited to share our final submission for OST KIT Alpha Phase II Dev Challenge! We hope you like the hard work we put into making a production ready app (DQuiz) over the last month!",
                                  handle:"@DappLabs",
                                  profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/dapplabs.jpg",
-                                 link:"https://twitter.com/DappLabs"
+                                 link:"https://twitter.com/DappLabs/status/999508563146850304"
 
                              },
 
@@ -41,28 +41,28 @@
                                desc: "Final submission of our #OSTa2 project $OST Loyalty for @OSTdotcom is done. It is a free loyalty&reward addon for the #ecommerce software @cscart, using any #OST branded token. We hope this a a good step towards more #cryptocurrency adoption. #blockchain",
                                handle:"@TechUpBusiness",
                                profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/techupbusiness.jpg",
-                               link:"https://twitter.com/TechUpBusiness"
+                               link:"https://twitter.com/TechUpBusiness/status/999929042747961344"
 
                              },
                              {
                                  desc: "I’m part of group of 142 others who are building a proof of concept for @OSTdotcom . I’m adding a token economy into Really Simple Store to facilitate “community selling.” Here’s my halfway video. Final video on May 25. #OSTa2",
                                  handle:"@truedrewco",
                                  profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/truedrewco.jpg",
-                                 link:"https://twitter.com/truedrewco"
+                                 link:"https://twitter.com/truedrewco/status/992212723852247040"
                              },
 
                              {
-                               desc: "Our team is currently hard at work building a universal tokenized allowance for kids. With the ability for parents & teachers to offer rewards and micro-incentives, we're focused on creating the most engaging & fun to use app for millions of children. Powered by",
+                               desc: "Our team is currently hard at work building a universal tokenized allowance for kids. With the ability for parents & teachers to offer rewards and micro-incentives, we're focused on creating the most engaging & fun to use app for millions of children. Powered by @ostdotcom #osta2",
                              handle:"@Ostkidtoken",
                                    profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/ostkidtoken.jpg",
-                             link:"https://twitter.com/Ostkidtoken"
+                             link:"https://twitter.com/Ostkidtoken/status/993891674194669568"
 
                              },
                              {
                                desc: "Been working on my new design for The Community Mind. Pretty pleased, just need to wire it up to the backend and my #OSTa2 alpha test should be good to go! [...]",
                                handle:"@WillAbramson",
                                profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/willabramson.jpg",
-                               link:"https://twitter.com/WillAbramson"
+                               link:"https://twitter.com/WillAbramson/status/996747734345572353"
 
                                },
                              ]
