--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -17,7 +17,7 @@
                              },
                              {
                                  desc: "Being a part of the growing developer community building on OST has been amazing. #osta2
-                                                   Using OST KIT, here’s a look at what dev. teams from around the world were able to create in less than six weeks!",
+                                                   Using OST KIT, here’s a look at what dev. teams from around the world were able to create in less than six weeks [...]",
                                  handle:"@Ostkidtoken",
                                  profile: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/winners-twitter/ostkidtoken.jpg",
                                  link:"https://twitter.com/Ostkidtoken/status/1001099129358028801"
