--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -9,12 +9,12 @@
   </div>
 
 <%
-
+  autoplay_version = "?rel=0&autoplay=1";
   side_by_side =  [{
                            :title => '"Ship It!": Kwanda',
                            :description => "Kwanda is a Q&A platform with a built in token economy. Users can set a specific reward value to a question allowing for receiveing and rewarding more high quality answers.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kawanda-1.png",
-                           :youtube_link => "https://www.youtube.com/embed/j9E90BxUBoI?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :youtube_link => "https://www.youtube.com/embed/j9E90BxUBoI" + autoplay_version,
                            :project_link => "http://kwanda.me",
                            :project_link_name => "KWANDA",
                            :participants => [
@@ -32,7 +32,7 @@
                            :title => "Best Motion Picture: kidtoken",
                            :description => "kidtoken is the first tokenized cryptocurrency for kids that also offers parents & teachers the ability to incentivize positive behaviors such as good grades, kindness and eating healthy. The platform is a scalable concept aimed at a massive audience, one that’s growing up familiar with digital economies.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kid-token.png",
-                           :youtube_link => "https://www.youtube.com/embed/fDTxlPmCSyc?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :youtube_link => "https://www.youtube.com/embed/fDTxlPmCSyc" + autoplay_version,
                            :project_link => "https://www.kidtoken.org",
                            :project_link_name => "KIDTOKEN",
                            :participants => [
@@ -66,7 +66,7 @@
                            :title => "Best UX: HARD Gaming",
                            :description => "The goal of HARD is to replace the use of in-game fiat currency. The biggest advantage of a blockchain based economy is that the users are the real owners of their tokens and that it’s transparent how each user is interacting with the economy. Users can use HARD across multiple games and they can make sure that tokens will not disappear, so they are more motivated to convert real money to tokens.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-hard-gaming.png",
-                           :youtube_link => "https://www.youtube.com/embed/wtO6d0DJF6s?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :youtube_link => "https://www.youtube.com/embed/wtO6d0DJF6s" + autoplay_version,
                            :project_link => "javascript:void()",
                            :project_link_name => "HARD GAMING",
                            :participants => [
@@ -80,7 +80,7 @@
                            :title => "Most Innovative: Coner",
                            :description => "The motivation behind Coner is the problem of limited efficiency of publications search in digital libraries. Coner is an interactive document viewer that visualises automatically extracted keywords in research papers and allows users to rate and add new keywords.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-coner.png",
-                           :youtube_link => "https://www.youtube.com/embed/G-bMkp8tm-A?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :youtube_link => "https://www.youtube.com/embed/G-bMkp8tm-A" + autoplay_version,
                            :project_link => "https://coner-viewer.herokuapp.com/viewer",
                            :project_link_name => "CONER",
                            :participants => [
@@ -94,7 +94,7 @@
                            :title => 'Best "Do Good": ReadIt',
                            :description => "ReadIt's mission is to reduce illiteracy by providing a scalable reading program that enhances the tracking & reward program by leveraging WebUI & Blockchain integration.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-read-it.png",
-                           :youtube_link => "https://www.youtube.com/embed/iKD4jAyXq4A?loop=1&showinfo=0&enablejsapi=1&autoplay=1",
+                           :youtube_link => "https://www.youtube.com/embed/iKD4jAyXq4A" + autoplay_version,
                            :project_link => "https://jshin2000.wixsite.com/readitprogram",
                            :project_link_name => "READIT",
                            :participants => [
