--- a/app/views/web/ost/winners/_news_carousel.erb
+++ b/app/views/web/ost/winners/_news_carousel.erb
@@ -111,6 +111,13 @@
               },
 
               {
+                title: "The next 14 #OSTa2 Projects (Pt. 3)",
+                article_link: "https://medium.com/ostdotcom/the-next-14-osta2-projects-pt-3-81d04adfa8f9",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-3.jpg",
+                date: "27 Apr 2018",
+              },
+
+              {
                 title: "14 more #OSTa2 Projects (Pt. 4)",
                 article_link: "https://medium.com/ostdotcom/14-more-osta2-projects-pt-4-b3592975a2f8",
                 image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/14-more-osta2-projects-pt-4.jpg",
