typo fix for Kwanda

--- a/app/views/web/ost/winners/_side_by_side.erb
+++ b/app/views/web/ost/winners/_side_by_side.erb
@@ -12,7 +12,7 @@
   autoplay_version = "?rel=0&autoplay=1";
   side_by_side =  [{
                            :title => '"Ship It!": Kwanda',
-                           :description => "Kwanda is a Q&A platform with a built in token economy. Users can set a specific reward value to a question allowing for receiving and rewarding more high quality answers.",
+                           :description => "Kwanda is a Q&A platform with a built-in token economy. Users can set a specific reward value to a question allowing for receiving and rewarding more high quality answers.",
                            :youtube_img => "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-sbs-kawanda-1.png",
                            :youtube_link => "https://www.youtube.com/embed/j9E90BxUBoI" + autoplay_version,
                            :project_link => "http://kwanda.me",
