--- a/app/views/web/ost/winners/_news_carousel.erb
+++ b/app/views/web/ost/winners/_news_carousel.erb
@@ -85,6 +85,12 @@
           ost.winner.newsCarousel.init(
             [
               {
+                title: "Announcing the winners of OST KIT⍺ Phase II Developer Challenge",
+                article_link: "https://medium.com/ostdotcom/announcing-the-winners-of-ost-kit-phase-ii-developer-challenge-beaa0dd0a656",
+                image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-proof-of-concept.png",
+                date: "11 June 2018",
+              },
+              {
                 title: "#OSTa2 — Halfway Video Updates",
                 article_link: "https://medium.com/ostdotcom/osta2-halfway-video-updates-4716fa05be38",
                 image: "https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-news/osta2-halfway-video-updates.jpg",
