--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -6,14 +6,30 @@
           <div class="container-subscribe">
             <h1>Get the Latest Updates from OST</h1>
             <form class="ost-form" id="subscribe-form">
+
               <div class="subscribe">
                 <div class="form-group mb-0">
-                  <input type="email" class="form-control mt-4" id="subscribe-form-email" name="email" placeholder="email@example.com">
-                  <div class="error d-block d-sm-none"></div>
-                  <button type="submit" class="btn btn-primary ml-md-3 mt-4" id="subscribe-form-submit" data-jsonp="<%= GlobalConstant::PepoCampaign.subscribe_url %>">Sign up</button>
+                  <input type="email" class="form-control mt-4" id="subscribe-form-email" name="email" placeholder="email@example.com" required>
+                  <div class="error"></div>
+                  <div class="form-group m-0 mx-auto" style="width: 65%">
+                    <label for="subscribe_confirmation" class="label-cbx mb-0 w-100">
+                      <input id="subscribe_confirmation" type="checkbox" name="subscribe_confirmation" value="1">
+                      <div class="checkbox">
+                        <svg width="18px" height="18px" viewBox="0 0 20 20">
+                          <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
+                          <polyline points="4 11 8 15 16 6"></polyline>
+                        </svg>
+                      </div>
+                      <span class="font-weight-normal info-text">I agree to receive the OST e-mail Newsletter with updates on OST products and services by OST.COM LTD.</span>
+                    </label>
+                    <div class="confirmation_error" data-for="subscribe_confirmation"></div>
+                  </div>
+                  <div class="general_error"></div>
+                  <button type="submit" class="btn btn-primary ml-md-3" id="subscribe-form-submit" data-jsonp="<%= GlobalConstant::PepoCampaign.subscribe_url %>">Sign up</button>
                 </div>
-                <div class="error d-none d-sm-block"></div>
+
               </div>
+
             </form>
             <div id="subscribe-success" style="display: none">
               <span class="small-title">Almost done</span>
