--- a/app/assets/stylesheets/web/ost/index/Subscribe.scss
+++ b/app/assets/stylesheets/web/ost/index/Subscribe.scss
@@ -3,7 +3,7 @@
     font-weight: 300;
     color: #438bad;
   }
-  .error, .general_error, .confirmation_error{
+  .error{
     min-height: 25px;
     font-weight: 300;
     font-size: 14px;
