--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -20,7 +20,7 @@
                           <polyline points="4 11 8 15 16 6"></polyline>
                         </svg>
                       </div>
-                      <span class="font-weight-normal info-text">I agree to receive the OST e-mail Newsletter with updates on OST products and services by OST.COM LTD.</span>
+                      <span class="font-weight-normal info-text">I agree to receive the OST e-mail Newsletter with updates on OST products and services by <a href="/">OST.COM LTD.</a> </span>
                     </label>
                     <div class="error confirmation_error" data-for="subscribe_confirmation"></div>
                   </div>
