--- a/app/assets/stylesheets/web/ost/index/Subscribe.scss
+++ b/app/assets/stylesheets/web/ost/index/Subscribe.scss
@@ -29,6 +29,13 @@
   }
 
   .label-cbx {
+    .checkbox{
+      top: 1px;
+      left: 8px;
+      svg {
+        border: 0px solid #438bad;
+      }
+    }
     input:checked{
       & + .checkbox{
         border-color: #438bad;
@@ -36,19 +43,28 @@
           path{
             fill: #438bad;
           }
-          polyline{
-            stroke-dashoffset: 0;
-          }
         }
       }
     }
-    .checkbox{
+    .checkbox {
+      border: 2px solid #438bad;
       svg {
-        border: 1px solid #438bad;
+        position: absolute;
+        top: -2px;
+        left: -2px;
+        path {
+          stroke: #438bad;
+        }
+        polyline {
+          stroke: #FFF;
+        }
       }
     }
   }
 
+  .ost-nav-link {
+    font-size: 12px;
+  }
 }
 
 #subscribe-success{
