--- a/app/views/web/ost/index/_subscribe.erb
+++ b/app/views/web/ost/index/_subscribe.erb
@@ -6,7 +6,6 @@
           <div class="container-subscribe">
             <h1>Get the Latest Updates from OST</h1>
             <form class="ost-form" id="subscribe-form">
-
               <div class="subscribe">
                 <div class="form-group mb-0">
                   <input type="email" class="form-control mt-4" id="subscribe-form-email" name="email" placeholder="email@example.com" required>
@@ -20,16 +19,16 @@
                           <polyline points="4 11 8 15 16 6"></polyline>
                         </svg>
                       </div>
-                      <span class="font-weight-normal info-text">I agree to receive the OST e-mail Newsletter with updates on OST products and services by <a href="/">OST.COM LTD.</a> </span>
+                      <span class="font-weight-normal info-text ost-nav-link">
+                        I agree to receive the OST e-mail Newsletter with updates on OST products and services by
+                        <a href="/">OST.COM LTD.</a> </span>
                     </label>
                     <div class="error confirmation_error" data-for="subscribe_confirmation"></div>
                   </div>
+                  <button type="submit" class="btn btn-primary px-5" id="subscribe-form-submit" data-jsonp="<%= GlobalConstant::PepoCampaign.subscribe_url %>">Sign up</button>
                   <div class="error general_error"></div>
-                  <button type="submit" class="btn btn-primary ml-md-3" id="subscribe-form-submit" data-jsonp="<%= GlobalConstant::PepoCampaign.subscribe_url %>">Sign up</button>
                 </div>
-
               </div>
-
             </form>
             <div id="subscribe-success" style="display: none">
               <span class="small-title">Almost done</span>
