team and careers pages changes by Ignas

--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -230,22 +230,29 @@
                             },
                             {
                                 name: "Deepesh Kumar Nath",
-                                title: "Director, Mobile Development",
+                                title: "Director Engineering",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Deepesh.png",
                                 linkedIn: 'https://www.linkedin.com/in/deepeshkumarnath/',
                                 description: "Deepesh has 10 years of solid IT experience in e-Commerce, retail and Financial domain. Currently designated as Director, Mobile Development and leading iOS team from past 2.6 years he is always updated with new and upcoming technologies and keen to learn more."
                             },
                             {
                                 name: "Aniket Ayachit",
-                                title: "iOS Developer",
+                                title: "Software Engineer",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Aniket-Ayachit.png",
                                 linkedIn: 'https://www.linkedin.com/in/aniketayachit/',
                                 twitter: 'https://twitter.com/Aniket_Ayachit/',
                                 description: "Aniket Ayachit is a Mobile Application Developer working as an iOS developer in the team. After spending nearly 4 years working as iOS developer on different types of application for startups and established companies, Aniket knows what makes an application smooth and highly responsive. Aniket holds a Bachelor of Engineering in Information Technology from the University of Pune."
                             },
                             {
+                                name: "Mohit Anand",
+                                title: "Director Blockchain Strategy Consultancy",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Mohit-Anand.png",
+                                linkedIn: 'https://www.linkedin.com/in/mohitanand86/',
+                                description: "Mohit is an experienced consultant having advised companies for close to a decade on new business cases, technologies and financing with a focus on cleantech in emerging markets. He co-founded two cleantech consultancies and led projects with international companies and investors across North America, Europe and Asia. Mohit holds a Master in Public Administration from Harvard University."
+                            },
+                            {
                                 name: "Sachin Chauhan",
-                                title: "Android Developer",
+                                title: "Software Engineer",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Sachin-Chauhan.png",
                                 linkedIn: 'https://www.linkedin.com/in/sachin-chauhan-a1bba981/',
                                 description: "Sachin is a mobile application developer working as an Android developer in the team. He has proficiency in designing UI for android applications. He has interests in Competitive programming and likes to solve challenging programming questions and also he is an active stock market trader."
@@ -279,13 +286,6 @@
                                 description: "Ashfaq is an experienced professional with experience in Operations Management including Facilities, Administration, Travel, Hospitality & HR across industries such as IT/ITES, Healthcare & Hospitality. With his expertise, experience & energy, Ashfaq provides strategic & tactical support critical to ensure smooth OST business operations."
                             },
                             {
-                                name: "Wilson Chia",
-                                title: "Community Manager",
-                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/wilson-chia.png",
-                                linkedIn: 'https://www.linkedin.com/in/chiawilson',
-                                description: "Wilson is a community manager and a cryptocurrency enthusiast. As a community manager, he seeks to share knowledge about OST in a concise and meaningful manner. Wilson is also passionate about analytics projects and deriving insights from data. Wilson is based in Singapore."
-                            },
-                            {
                                 name: "Santhosh Reddy",
                                 title: "Software Engineer",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Santhosh-Reddy.jpg",
@@ -312,13 +312,6 @@
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Mayur-Patil.png",
                                 linkedIn: 'https://www.linkedin.com/in/mayur-patil-21b2a8122/',
                                 description: "Mayur is a Front-End developer who previously worked as a Full Stack developer. He is passionate about building applications using Python and Front-End technologies. Mayur holds a Bachelor of Engineering degree from the University of Pune."
-                            },
-                            {
-                                name: "Anna Balog",
-                                title: "Office Manager",
-                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Anna-Balog.png",
-                                linkedIn: 'https://www.linkedin.com/in/anna-balog-0b2132b8/',
-                                description: "Anna has a lot of experience in tourism and customer service: At OST she puts these qualities to work to support the Berlin team in their daily operations, from travel arrangements to general administrative support."
                             },
                             {
                                 name: "Nike Oberemm",
@@ -369,6 +362,55 @@
                                 linkedIn: 'https://www.linkedin.com/in/jainsarvesh',
                                 description: "Sarvesh, a Software Engineer, joined the Pune Team as a Blockchain Developer. He is an expert in backend development and system designing. Sarvesh loves to travel and he is an avid cyclist. In his free time, he likes to read up on the latest news in the tech industry."
                             },
+                            {
+                                name: "Anagha Murutkar",
+                                title: "Software Engineer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Anagha-Murtarkar.png",
+                                linkedIn: 'https://www.linkedin.com/in/anagha-murtarkar/',
+                                description: "Anagha is a Software Engineer who joined the backend team. She has experience in working with Machine Learning & Image Processing. In her leisure time, she likes doing competitive coding. She has received her Engineering from Pune Institute of Computer Technology (PICT)."
+                            },
+                            {
+                                name: "Gulshan Vasnani",
+                                title: "Blockchain Engineer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Gulshan-Vasnani.png",
+                                linkedIn: 'https://www.linkedin.com/in/gulshan-vasnani-21091b71/',
+                                description: "Gulshan is passionate about learning and understanding new technologies. He has more than 3 years of experience as Full-Stack Developer in technologies like Java, Hibernate, Javascript, KnouckOutJS, CSS, SASS, Ant and Jenkins. His interests include playing cricket, watching movies and listening to music."
+                            },
+                            {
+                                name: "Shlok Gilda",
+                                title: "Software Engineer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Shlok-Gilda.png",
+                                linkedIn: 'https://www.linkedin.com/in/shlok-gilda-91416b167/',
+                                description: "Shlok is software engineer with a keen interest in security and Artificial Intelligence. He is passionate about building intelligent and secure applications using what the latest technology has to offer. He is a travel enthusiast who loves the outdoors. Shlok has a Bachelor’s degree in Computer Science from University of Pune."
+                            },
+                            {
+                                name: "Tejas Sangani",
+                                title: "Software Engineer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Tejas-Sangani.png",
+                                linkedIn: 'https://www.linkedin.com/in/tejas-sangani-974a35147/',
+                                description: "Tejas is a Software Engineer who is passionate about building smooth and highly responsive applications using Front-End and Back-End technologies. He holds a Bachelor of Engineering degree in Computer Science from the University of Pune."
+                            },
+                            {
+                                name: "Shraddha Patil",
+                                title: "Software Engineer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Shraddha-Patil.png",
+                                linkedIn: 'https://www.linkedin.com/in/shraddha-patil-1a7282a6/',
+                                description: "Shraddha joined OST as a front end developer. She likes learning new front-end technologies and developing applications for mobile and web. Her interests include front-end technologies, full stack and android development. She completed Engineering degree in Computer Science from PICT."
+                            },
+                            {
+                                name: "Aman Pruthi",
+                                title: "Software Engineer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Aman-Pruthi.png",
+                                linkedIn: 'www.linkedin.com/in/aman-pruthi-a29a0194',
+                                description: "Aman is a Software engineer with 3 years of experience in Telcom industry. He is passionate about Devops tools and technologies. He is a travel enthusiast and loves endurance sports like running and cycling. He is a strong engineering professional with a Bachelor's degree in Computer Engineering from University of Pune."
+                            },
+                            {
+                                name: "Dhananjay Patil",
+                                title: "Software Engineer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Dhananjay-Patil.png",
+                                linkedIn: 'https://in.linkedin.com/in/dhananjay08patil',
+                                description: "Dhananjay joined Pune team as Software Engineer. He is a Computer Science graduate from University of Pune with a keen interest in programming and technologies. He loves to build highly scalable applications using cutting-edge technologies. Dhananjay is also enthusiastic about soccer and trekking."
+                            }
                             ];
 
             %>
