partners page member companies updates

--- a/app/views/web/ost/partners/_member_companies.erb
+++ b/app/views/web/ost/partners/_member_companies.erb
@@ -6,6 +6,18 @@
         <%
            img_root = "//dxwfxs8b4lg24.cloudfront.net/ost/images/member-companies/";
            member_companies = [
+             {
+               image: img_root + "lgbt-foundation.jpg",
+           image_height: '35',
+           image_alt: 'LGBT',
+           description: "The LGBT Foundation will be launching the LGBT Token to empower, connect and support LGBT+ people all over the world. One of its first launch partners is Hornet Networks, a social platform for gay men with more than 24 million users worldwide."
+           },
+           {
+             image: img_root + "fincom.jpg",
+           image_height: '35',
+           image_alt: 'FinComEco',
+           description: "GMEX, Block Commodities Ltd. and FinComEco are endeavouring to build a tokenised ecosystem of e-commerce partners featuring local vendors and service providers, as well as medical and educational institutions, where the FACES tokens can be redeemed."
+           },
            {
              image: img_root + "fanin.jpg",
            image_height: '35',
