--- a/app/assets/stylesheets/web/ost/winners/Signup.scss
+++ b/app/assets/stylesheets/web/ost/winners/Signup.scss
@@ -86,6 +86,13 @@
     border-bottom: 1px solid $white;
   }
 
+
+  .ost-home-link {
+    color: $white;
+    &:hover, &:active {
+      color: $yellow-500;
+    }
+  }
 }
 
 .form-recapcha .form-recapcha-wrap div {
@@ -99,4 +106,28 @@
 
 body.modal-open{
   overflow: hidden;
+}
+
+
+#subscribe-success{
+  text-align: center;
+  background: #fff;
+  border-radius: 10px;
+  padding: 10px 15px 25px 10px;
+  margin: 30px auto 0;
+  .small-title{
+    color: #438bad;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 3px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    display: block;
+  }
+  .small-desc{
+    color: #438bad;
+    font-weight: 300;
+    font-size: 16px;
+    display: block;
+  }
 }
