--- a/app/views/web/ost/winners/_subscribe.erb
+++ b/app/views/web/ost/winners/_subscribe.erb
@@ -8,102 +8,45 @@
         </div>
       </div>
       <div class="row">
-        <form action="/api/home/alpha3/signup" method="GET" class="custom-form col-11 col-md-6 col-xl-6 mx-auto" id="sign-up-form">
+
+        <form class="custom-form col-11 col-md-6 col-xl-6 mx-auto text-center" id="subscribe-form">
 
           <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12">
               <div class="input-container">
-                <label>FIRST NAME</label>
-                <input class="input" id="first_name" type="text" name="first_name" value="" title="First Name" required autocomplete="off" />
+                <input class="input" id="subscribe-form-email" placeholder="email@example.com" type="email" name="email" value="" title="Email" required autocomplete="off" />
                 <span class="input-border"></span>
               </div>
-              <div class="error" data-for="first_name"></div>
-            </div>
-            <div class="col-12 col-md-6">
-              <div class="input-container">
-                <label>LAST NAME</label>
-                <input type="text" id="last_name" class="input" name="last_name" title="Last Name" autocomplete="off" required/>
-                <span class="input-border"></span>
-              </div>
-              <div class="error" data-for="last_name"></div>
+              <div class="error email-error" data-for="email"></div>
             </div>
           </div>
-
-          <div class="input-container">
-            <label>EMAIL ADDRESS</label>
-            <input class="input" id="email" type="email" name="email" value="" title="Email Address" required autocomplete="off" />
-            <span class="input-border"></span>
-          </div>
-          <div class="error" data-for="email"></div>
-
-          <div class="input-container">
-            <label>COMPANY NAME / PROJECT NAME</label>
-            <input class="input" id="company_name" type="text" name="company_name" value="" title="Company Name" required autocomplete="off" />
-            <span class="input-border"></span>
-          </div>
-          <div class="error" data-for="company_name"></div>
-
-          <div class="form-group mb-0">
-            <label class="mb-0 d-block">SHORT PROJECT DESCRIPTION & COMMENTS</label>
-            <div class="info-text mb-3">If you have an idea about what you would like to demonstrate, let us know below.</div>
-            <textarea class="w-100" id="project_description" name="project_description"
-                      title="Short project description & comments" style="resize:none" rows="4" cols="50" required></textarea>
-          </div>
-          <div class="error" data-for="project_description"></div>
 
           <div class="form-group m-0">
-            <label for="ost_product_communicate" class="label-cbx mb-0 w-100">
-              <input id="ost_product_communicate" type="checkbox" name="ost_product_communicate" value="1">
+            <label for="subscribe_confirmation" class="label-cbx mb-0 w-100">
+              <input id="subscribe_confirmation" type="checkbox" name="subscribe_confirmation" value="1">
               <div class="checkbox">
                 <svg width="18px" height="18px" viewBox="0 0 20 20">
                   <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
                   <polyline points="4 11 8 15 16 6"></polyline>
                 </svg>
               </div>
-              <span class="font-weight-normal info-text">I agree to OST contacting me about OST KIT Alpha III, as described in the <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy" class="terms-link" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
+              <span class="font-weight-normal info-text">
+                I agree to receive the OST e-mail Newsletter with updates on OST products and services by
+                <a href="/" class="ost-home-link">OST.COM LTD.</a> </span>
+              </span>
             </label>
-            <div class="error" data-for="ost_product_communicate"></div>
-          </div>
-
-          <div class="form-group">
-            <label for="kit_marketing" class="label-cbx mb-0">
-              <input id="kit_marketing" type="checkbox" name="kit_marketing" value="1">
-              <div class="checkbox">
-                <svg width="18px" height="18px" viewBox="0 0 20 20">
-                  <path d="M3,1 L17,1 L17,1 C18.1045695,1 19,1.8954305 19,3 L19,17 L19,17 C19,18.1045695 18.1045695,19 17,19 L3,19 L3,19 C1.8954305,19 1,18.1045695 1,17 L1,3 L1,3 C1,1.8954305 1.8954305,1 3,1 Z"></path>
-                  <polyline points="4 11 8 15 16 6"></polyline>
-                </svg>
-              </div>
-              <span class="font-weight-normal info-text">I agree to OST sending me marketing communications, as described in the <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy" class="terms-link" title="Privacy Policy" target="_blank">Privacy Policy</a>.</span>
-            </label>
+            <div class="error confirmation_error" data-for="subscribe_confirmation"></div>
           </div>
 
           <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
-          <div class="form-group mb-0 form-recapcha">
-            <div class="g-recaptcha form-recapcha-wrap"  data-callback="kyc_recaptcha_callback"
-                 data-sitekey="<%= GlobalConstant::Base.recaptcha['site_key'] %>"></div>
-            <div class="error" data-for="recaptcha" style="text-align: center"></div>
-          </div>
-          <button type="submit" class="btn btn-primary" id="sign-up-form-submit" style="margin: 0 auto;display: block;" title="Sign Up">Sign Up</button>
-          <div class="error text-center" data-for="general_error"></div>
+          <button type="submit" class="btn btn-primary px-5" id="subscribe-form-submit"
+                  data-jsonp="<%= GlobalConstant::PepoCampaign.subscribe_url %>">Sign up</button>
+          <div class="error text-center general_error" data-for="general_error"></div>
         </form>
 
-        <div id="successModal" class="modal fade user-modal" role="dialog" tabindex="-1">
-          <div class="modal-dialog modal-dialog-centered modal-lg h-100 mx-auto my-0">
-            <div class="modal-content rounded-0">
-              <div class="modal-body text-center py-4">
-                <svg class="icon" style="width:50px; height: 50px">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#success-icon">
-                    </use>
-                  </switch>
-                </svg>
-                <h5>Thank you for signing up.</h5>
-                <h5>We will inform you know as soon as OST KIT⍺ Phase III is open for applications!</h5>
-                <button class="btn btn-primary mt-4" title="Close" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
+        <div id="subscribe-success" style="display: none">
+          <span class="small-title">Almost done</span>
+          <span class="small-desc">To confirm your email address, please click the link in the email we just sent you.</span>
         </div>
 
       </div>
