--- a/app/views/web/ost/winners/_jumbotron.erb
+++ b/app/views/web/ost/winners/_jumbotron.erb
@@ -9,7 +9,7 @@
         </p>
         <!--TODO: change link for winners-->
         <a href="#winners" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See The Winners">SEE THE WINNERS</a>
-        <a href="#subscribe" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="SIGN UP FOR ALPHA III">SIGN UP FOR ALPHA III</a>
+        <a href="https://docs.google.com/forms/d/1ZqOHna30knesN1kVB6GXfQi2fblUt-pMPlUBORqR6yo" target="_blank" class="btn btn-secondary my-2 ml-xl-3" title="Register FOR OST ALPHA III">Register FOR OST ALPHA III</a>
       </div>
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
