--- a/app/assets/stylesheets/web/ost/winners/Signup.scss
+++ b/app/assets/stylesheets/web/ost/winners/Signup.scss
@@ -93,6 +93,23 @@
       color: $yellow-500;
     }
   }
+
+  #subscribe-form-email{
+    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      color: rgba(255, 255, 255, 0.6);
+    }
+    &::-moz-placeholder { /* Firefox 19+ */
+      color: rgba(255, 255, 255, 0.6);
+    }
+    &:-ms-input-placeholder { /* IE 10+ */
+      color: rgba(255, 255, 255, 0.6);
+    }
+    &:-moz-placeholder { /* Firefox 18- */
+      color: rgba(255, 255, 255, 0.6);
+    }
+  }
+
+
 }
 
 .form-recapcha .form-recapcha-wrap div {
@@ -114,7 +131,7 @@ body.modal-open{
   background: #fff;
   border-radius: 10px;
   padding: 10px 15px 25px 10px;
-  margin: 30px auto 0;
+  margin: 0px auto 0;
   .small-title{
     color: #438bad;
     text-transform: uppercase;
