--- a/app/views/web/ost/index/_uber_banner.erb
+++ b/app/views/web/ost/index/_uber_banner.erb
@@ -6,7 +6,7 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#uber-banner-megaphone-icon"></use>
         </switch>
       </svg>
-      <a href="https://medium.com/ostdotcom/ost-kit-alpha-iii-4a67ea214971" target="_blank" class="align-middle" title="OST KIT Alpha III is now open for applications.">OST KIT Alpha III is now open for applications. Earn up to 350,000 OST! Learn more.</a>
+      <a href="https://medium.com/ostdotcom/ost-kit-alpha-iii-4a67ea214971" target="_blank" class="align-middle" title="OST KIT Alpha III is now open for applications.">OST KIT Alpha III is now open for registration. Earn up to 350,000 OST! Learn more.</a>
     </div>
   </div>
 </div>
@@ -19,7 +19,7 @@
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#uber-banner-megaphone-icon"></use>
         </switch>
       </svg>
-      <a href="https://medium.com/ostdotcom/ost-kit-alpha-iii-4a67ea214971" target="_blank" class="align-middle" title="OST KIT Alpha III is now open for applications.">OST KIT Alpha III is now open for applications. Earn up to 350,000 OST! Learn more.</a>
+      <a href="https://medium.com/ostdotcom/ost-kit-alpha-iii-4a67ea214971" target="_blank" class="align-middle" title="OST KIT Alpha III is now open for applications.">OST KIT Alpha III is now open for registration. Earn up to 350,000 OST! Learn more.</a>
     </div>
   </div>
 </div>
