update careers site by Ignas

--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -55,9 +55,9 @@
                 description: "OST “Simple Token”  is looking for engineers with an interest in blockchain and other decentralized systems to help develop the OpenST protocol and related technology. This role will include architecting and implementing robust innovative smart contract-based solutions to complex blockchain and tokenization questions in collaboration with teammates across the engineering and other teams. You should be comfortable working in an environment that is as collegial, supportive, and multicultural as it is challenging and fast-paced. You should get excited about building the backend tools for developers to reshape the internet, one application and one community at a time.",
             },
             {
-                profile: "Junior Office Manager with Accounting Knowledge",
+                profile: "Office Manager",
                 profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1vf71LwK5SMuG@7SQ2jX8R8-&embedsource=Embed",
-                description: "The combined role of the Office Manager with Accounting Knowledge is the front person for all office related queries.",
+                description: "We are currently looking for an experienced Office Manager & Head of Administration to join our team in Berlin. The person will be responsible for organising and coordinating everything office and administration related, to ensure a smooth and pleasant working environment. This is a perfect role for an energetic multi-tasker.",
             },
             {
                 location: "New York",
