Adding Online Community Manager position for Pune location requested by Ignas!

--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -86,6 +86,11 @@
                 profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1lEc3F8neIS3T4kEkvxqrZg-&embedsource=Embed",
                 description: "OST “Simple Token”  is looking for Director of Human Resources to help us build' the best blockchain company to work at. A workplace where everyone loves their job, enjoys coming to work, respects and appreciates their colleagues, and where everyone is constantly challenged, learning and growing.",
             },
+            {
+                profile: "Online Community Manager",
+                profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1lgX@6RVsXiVKPS8gC10UUU-&embedsource=Embed",
+                description: "Community managers are on the front lines as representatives of the company in social media channels. We want to mobilise our community of developers, prospects, and beta users to become evangelists for OST and build new products based on the OpenST protocol.",
+            },
         ]
       %>
 
