adding a new folder for new partners page

--- a/app/views/web/ost/new-partners/_jumbotron.erb
+++ b/app/views/web/ost/new-partners/_jumbotron.erb
@@ -1,12 +1,22 @@
-<div class="container">
-  <div class="row container-jumbotron pt-4">
-    <div class="col-12">
-      <h2 class="mb-3">Partner Companies</h2>
-      <p class="mb-3">
-        We're building the complete blockchain toolkit for business. OST, built on the OpenST protocol, enables any business to easily deploy and manage their own branded crypto-backed token economies on open scalable side blockchains. OST partners benefit by providing direct input into our features and roadmap, and helping shape the OST platform to ensure that it meets their unique business needs.
-      </p>
-      <a href="#contactus" class="btn btn-primary smooth-scroll m-2" title="Contact Us">Contact Us</a>
-      <a href="#member-companies" class="btn btn-secondary smooth-scroll m-2" title="Meet Partners">Meet Partners</a>
+<section class="container-jumbotron py-5">
+  <div class="container">
+    <div class="row align-items-center">
+
+      <div class="col-md-12 col-lg-6">
+        <h3 class="font-weight-bold">OST Partners</h3>
+        <p class="mt-3">
+          We're building the complete blockchain toolkit for business. OST, built on the OpenST protocol, enables any business to easily deploy and manage their own branded crypto-backed token economies on open scalable side blockchains. OST partners benefit by providing direct input into our features and roadmap.
+        </p>
+        <a href="#winners" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See The Winners">SEE THE WINNERS</a>
+        <a href="https://docs.google.com/forms/d/1ZqOHna30knesN1kVB6GXfQi2fblUt-pMPlUBORqR6yo" target="_blank" class="btn btn-secondary my-2 ml-xl-3" title="Register FOR OST ALPHA III">Register FOR OST ALPHA III</a>
+      </div>
+
+      <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
+        <div class="illustration w-100">
+          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-jumbotron-hero-image@1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-jumbotron-hero-image@2x.png 1000w" class="img-fluid position-relative" alt="OST Winners Hero"/>
+        </div>
+      </div>
+
     </div>
   </div>
-</div>
+</section>
