--- a/app/views/web/ost/partners.html.erb
+++ b/app/views/web/ost/partners.html.erb
@@ -1,7 +1,26 @@
 <%= render :partial => "/shared/web/common/navbar" %>
-<div class="container-partners container-press">
-  <%= render :partial => "/web/ost/new-partners/jumbotron" %>
-  <%= render :partial => "/web/ost/new-partners/partners_updates", locals: {title: ''}  %>
-</div>
-<%= render :partial => "/web/ost/new-partners/member_companies" %>
-<%= render :partial => "/web/ost/new-partners/contact_us" %>
+<%= render :partial => "/web/ost/new-partners/jumbotron" %>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- old partners page erb files -->
+
+<%#= render :partial => "/shared/web/common/navbar" %>
+<!--<div class="container-partners container-press">-->
+  <%#= render :partial => "/web/ost/partners/jumbotron" %>
+  <%#= render :partial => "/web/ost/partners/partners_updates", locals: {title: ''}  %>
+<!--</div>-->
+<%#= render :partial => "/web/ost/partners/contact_us" %>
+<%#= render :partial => "/web/ost/partners/member_companies" %>
