adding a new folder for new partners page

--- a/app/assets/stylesheets/web/ost-partners.css
+++ b/app/assets/stylesheets/web/ost-partners.css
@@ -1,7 +1,27 @@
 /*
  *= require plugins/slick/slick
  *= require plugins/slick/slick-theme
- *= require web/ost/partners/Partners
- *= require web/ost/partners/Placeholder
+ *= require web/ost/new-partners/Partners
  *= require web/common/_icons
+ */
+
+
+
+
+
+
+
+
+
+
+
+
+/* old partners page css files */
+
+/*
+ *=# require plugins/slick/slick
+ *=# require plugins/slick/slick-theme
+ *=# require web/ost/partners/Partners
+ *=# require web/ost/partners/Placeholder
+ *=# require web/common/_icons
  */
