new partner-companies changes

--- a/app/views/web/ost/partners.html.erb
+++ b/app/views/web/ost/partners.html.erb
@@ -1,5 +1,7 @@
 <%= render :partial => "/shared/web/common/navbar" %>
 <%= render :partial => "/web/ost/new-partners/jumbotron" %>
+<%= render :partial => "/web/ost/new-partners/partner_companies" %>
+
 
 
 
