--- a/app/assets/stylesheets/web/ost/new-partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/new-partners/Partners.scss
@@ -89,3 +89,13 @@
   display: inline-block;
   width:auto !important;
 }
+
+.partnering_with_ost{
+  background-color: #afe1e3;
+  .desp_style{
+    font-size: 12px;
+    color: #597a84;
+  }
+
+
+}
