--- a/app/views/web/ost/partners.html.erb
+++ b/app/views/web/ost/partners.html.erb
@@ -2,10 +2,11 @@
 <%= render :partial => "/web/ost/new-partners/jumbotron" %>
 
 <%= render :partial => "/web/ost/new-partners/partner_companies" %>
-
+<%= render :partial => "/web/ost/new-partners/partnering_with_ost" %>
 
 <%= render :partial => "/web/ost/new-partners/industries" %>
 <%= render :partial => "/web/ost/new-partners/contact_us" %>
+
 
 
 
