--- a/app/views/web/ost/new-partners/_jumbotron.erb
+++ b/app/views/web/ost/new-partners/_jumbotron.erb
@@ -11,9 +11,9 @@
         <a href="" target="_blank" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Meet Our Partners">Meet Our Partners</a>
       </div>
 
-      <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
+      <div class="col-md-12 col-lg-6 text-center mt-4 mt-md-0">
         <div class="illustration w-100">
-          <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-jumbotron-hero-image@1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-winners/ost-winners-jumbotron-hero-image@2x.png 1000w" class="img-fluid position-relative" alt="OST Winners Hero"/>
+          <img src="ost-partners-jumbotron-hero-image@1x.png" srcset="ost-partners-jumbotron-hero-image@2x.png 1000w" class="img-fluid position-relative" alt="OST Winners Hero"/>
         </div>
       </div>
 
