--- a/app/views/web/ost/new-partners/_svgs.erb
+++ b/app/views/web/ost/new-partners/_svgs.erb
@@ -1,5 +1,5 @@
 <svg xmlns="http://www.w3.org/2000/svg" display="none">
-  <symbol id="icon-play" viewBox="0 0 360 235">
+  <symbol id="unsplash-logo" viewBox="0 0 360 235">
     <g id="Partners_Web-V0" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
       <g id="Unsplash_green" fill-rule="nonzero">
         <rect id="Rectangle-8-Copy-2" x="0" y="0" width="360" height="235"></rect>
