--- a/app/views/web/ost/partners.html.erb
+++ b/app/views/web/ost/partners.html.erb
@@ -6,6 +6,7 @@
 
 <%= render :partial => "/web/ost/new-partners/industries" %>
 <%= render :partial => "/web/ost/new-partners/contact_us" %>
+<%= render :partial => "/web/ost/new-partners/svgs" %>
 
 
 
